2021-04-06  Oliver Kiddle  <opk@zsh.org>

	* Marc Chantreux: users/26579: Completion/Unix/Command/_surfraw:
	changes from review including parameter expansion to replace awk

	* 48414: Completion/Unix/Type/_bpf_filters: quote closing bracket
	to adapt for change in 43928

	* Marlon Richert: 48413: Test/comptest, Test/Y01completion.ztst:
	Fix _expand completion test

	* unposted: Etc/BUGS: add several references to old list posts

2021-04-05  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Etc/FAQ.yo: FAQ: Move the 'The mailing lists have
	moved' notice to a more appropriate place.

2021-04-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Felipe Contreras: 47784: Src/pattern.c: silence compiler
	warning -Wmaybe-uninitialized

	* Jacob Gelbman: 48218 (+ 48354): Completion/Unix/Command/_gcc:
	various improvements for _gcc

2021-04-02  Oliver Kiddle  <opk@zsh.org>

	* 47510: Src/prompt.c, Src/zsh.h: drop code that avoided
	termcap for named colours

	* 48356: Doc/Zsh/compwid.yo: clarify (the intended)
	behaviour for the two anchor forms of matching control

2021-04-01  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Etc/BUGS: Add 39319, a named-file process
	substitution cleanup bug.

2021-04-01  Mikael Magnusson  <mikachu@gmail.com>

	* 48202 (+ 48366 test fix from Jun): Src/utils.c,
	Test/B03print.ztst: Fix handling of NUL bytes in zexpandtabs
	multibyte version

2021-03-31  Oliver Kiddle  <opk@zsh.org>

	* github #74: Caleb Maclennan: Completion/Unix/Command/_vcsh:
	Drop vcsh completions, maintained upstream

	* Marlon Richert: 48214: Completion/Base/Completer/_expand,
	Test/Y01completion.ztst: add file types to _expand completions,
	so they can be colored through complist

	* Christian K: 48192: Completion/Unix/Command/_openstack:
	Fix openstack completion for new style clients

	* Marc Chantreux: users/26557: Completion/Unix/Command/_surfraw:
	add bookmarks support and remove the header from the final list
