@@ -1,3 +1,8 @@
+2021-04-06  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>
+
+	* 48389: Src/math.c, Src/utils.c: getkeystring(GETKEY_SINGLE_CHAR)
+	should not return a pointer to a local variable
+
 2021-04-06  Oliver Kiddle  <opk@zsh.org>
 
 	* Marc Chantreux: users/26579: Completion/Unix/Command/_surfraw:
